Change the shadow mapping to use FBO.