@@ -1,2 +1,2 @@
 set SCRIPT_DIR=%~dp0
-java -Xmx512M -jar "%SCRIPT_DIR%\tools\sbt-launch.jar" %*
+java -Xmx1024M -XX:ReservedCodeCacheSize=64m -XX:MaxPermSize=256M -XX:+CMSClassUnloadingEnabled -jar "%SCRIPT_DIR%\tools\sbt-launch.jar" %*
